# tiebrush

./: .gitmodules  CMakeLists.txt  README.rst  SAMPLE_COUNTS.md  run_tiebrush.py  sashimi.py  tiewrap.py
cmake/: htslib.cmake
example/: README.md
src/: CMakeLists.txt  GSam.cpp  GSam.h  commons.h  tiebrush.cpp  tiecov.cpp  tieme.cpp  tmerge.cpp  tmerge.h  untie.cpp
